# prosafe-vlan-manager

./: .gitignore  README.md  pyproject.toml
prosafe/: __main__.py  cli.py  vlan_config.py
prosafe/switches/: __init__.py  general.py
prosafe/switches/gs108ev3/: __init__.py  consts.py  switch.py  utils.py
prosafe/switches/gs116ev2/: consts.py  switch.py  utils.py
